site_in_progress

--- a/publications/title-metadata.html
+++ b/publications/title-metadata.html
@@ -90,7 +90,7 @@ $endif$
       $if(online)$
       <a href=$online$ class="badge badge badge-blue">Online</a>
       $endif$
-      $if(file)$<a href="https://lucas-shubby.netlify.app/papers/$file$" class="badge badge badge-red"><i class="fa-regular fa-file-pdf" aria-hidden="true"></i>&nbsp;pdf</a>
+      $if(file)$<a href="https://lsoboyejo.netlify.app/papers/$file$" class="badge badge badge-red"><i class="fa-regular fa-file-pdf" aria-hidden="true"></i>&nbsp;pdf</a>
       $endif$
       $if(github)$<a href="http://github.com/$github$" class="badge badge badge-green"><i class="fa fa-brands fa-github"></i>&nbsp;code</a>
       $endif$
